add account nft mute api
