# middle_platform/api/nft_transfer/v1/nft_transfer_grpc.pb.go
@@ -1,7 +1,7 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
 // versions:
 // - protoc-gen-go-grpc v1.3.0
-// - protoc             v3.19.4
+// - protoc             v4.23.3
 // source: nft_transfer/v1/nft_transfer.proto
 
 package v1
@@ -19,10 +19,11 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	NftTransfer_GetNftTransfer_FullMethodName = "/api.nft_transfer.v1.NftTransfer/GetNftTransfer"
-	NftTransfer_GetReportSpam_FullMethodName  = "/api.nft_transfer.v1.NftTransfer/GetReportSpam"
-	NftTransfer_PostReportSpam_FullMethodName = "/api.nft_transfer.v1.NftTransfer/PostReportSpam"
-	NftTransfer_GetTransferNft_FullMethodName = "/api.nft_transfer.v1.NftTransfer/GetTransferNft"
+	NftTransfer_GetNftTransfer_FullMethodName        = "/api.nft_transfer.v1.NftTransfer/GetNftTransfer"
+	NftTransfer_GetReportSpam_FullMethodName         = "/api.nft_transfer.v1.NftTransfer/GetReportSpam"
+	NftTransfer_PostReportSpam_FullMethodName        = "/api.nft_transfer.v1.NftTransfer/PostReportSpam"
+	NftTransfer_GetTransferNft_FullMethodName        = "/api.nft_transfer.v1.NftTransfer/GetTransferNft"
+	NftTransfer_PostReportAccountMute_FullMethodName = "/api.nft_transfer.v1.NftTransfer/PostReportAccountMute"
 )
 
 // NftTransferClient is the client API for NftTransfer service.
@@ -33,6 +34,7 @@ type NftTransferClient interface {
 	GetReportSpam(ctx context.Context, in *GetReportSpamRequest, opts ...grpc.CallOption) (*GetReportSpamReply, error)
 	PostReportSpam(ctx context.Context, in *PostReportSpamRequest, opts ...grpc.CallOption) (*PostReportSpamReply, error)
 	GetTransferNft(ctx context.Context, in *GetTransferNftRequest, opts ...grpc.CallOption) (*GetTransferNftReply, error)
+	PostReportAccountMute(ctx context.Context, in *PostReportAccountMuteRequest, opts ...grpc.CallOption) (*PostReportAccountMuteReply, error)
 }
 
 type nftTransferClient struct {
@@ -79,6 +81,15 @@ func (c *nftTransferClient) GetTransferNft(ctx context.Context, in *GetTransferN
 	return out, nil
 }
 
+func (c *nftTransferClient) PostReportAccountMute(ctx context.Context, in *PostReportAccountMuteRequest, opts ...grpc.CallOption) (*PostReportAccountMuteReply, error) {
+	out := new(PostReportAccountMuteReply)
+	err := c.cc.Invoke(ctx, NftTransfer_PostReportAccountMute_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // NftTransferServer is the server API for NftTransfer service.
 // All implementations must embed UnimplementedNftTransferServer
 // for forward compatibility
@@ -87,6 +98,7 @@ type NftTransferServer interface {
 	GetReportSpam(context.Context, *GetReportSpamRequest) (*GetReportSpamReply, error)
 	PostReportSpam(context.Context, *PostReportSpamRequest) (*PostReportSpamReply, error)
 	GetTransferNft(context.Context, *GetTransferNftRequest) (*GetTransferNftReply, error)
+	PostReportAccountMute(context.Context, *PostReportAccountMuteRequest) (*PostReportAccountMuteReply, error)
 	mustEmbedUnimplementedNftTransferServer()
 }
 
@@ -105,6 +117,9 @@ func (UnimplementedNftTransferServer) PostReportSpam(context.Context, *PostRepor
 }
 func (UnimplementedNftTransferServer) GetTransferNft(context.Context, *GetTransferNftRequest) (*GetTransferNftReply, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method GetTransferNft not implemented")
+}
+func (UnimplementedNftTransferServer) PostReportAccountMute(context.Context, *PostReportAccountMuteRequest) (*PostReportAccountMuteReply, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method PostReportAccountMute not implemented")
 }
 func (UnimplementedNftTransferServer) mustEmbedUnimplementedNftTransferServer() {}
 
@@ -191,6 +206,24 @@ func _NftTransfer_GetTransferNft_Handler(srv interface{}, ctx context.Context, d
 	return interceptor(ctx, in, info, handler)
 }
 
+func _NftTransfer_PostReportAccountMute_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(PostReportAccountMuteRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(NftTransferServer).PostReportAccountMute(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: NftTransfer_PostReportAccountMute_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(NftTransferServer).PostReportAccountMute(ctx, req.(*PostReportAccountMuteRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // NftTransfer_ServiceDesc is the grpc.ServiceDesc for NftTransfer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -213,6 +246,10 @@ var NftTransfer_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "GetTransferNft",
 			Handler:    _NftTransfer_GetTransferNft_Handler,
+		},
+		{
+			MethodName: "PostReportAccountMute",
+			Handler:    _NftTransfer_PostReportAccountMute_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
