# middle_platform/openapi.yaml
@@ -67,6 +67,24 @@ paths:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/exchange_rate.v1.RateReply'
+    /v1/nfts/mute:
+        post:
+            tags:
+                - NftTransfer
+            operationId: NftTransfer_PostReportAccountMute
+            requestBody:
+                content:
+                    application/json:
+                        schema:
+                            $ref: '#/components/schemas/api.nft_transfer.v1.PostReportAccountMuteRequest'
+                required: true
+            responses:
+                "200":
+                    description: OK
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/api.nft_transfer.v1.PostReportAccountMuteReply'
     /v1/nfts/report/spam:
         get:
             tags:
@@ -167,28 +185,17 @@ paths:
                 - name: limit
                   in: query
                   schema:
-                    type: string
+                    type: integer
+                    format: uint64
                 - name: cursor
                   in: query
                   schema:
+                    type: integer
+                    format: uint64
+                - name: accountId
+                  in: query
+                  schema:
                     type: string
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/api.nft_transfer.v1.GetNftTransferReply'
-        post:
-            tags:
-                - NftTransfer
-            operationId: NftTransfer_GetNftTransfer
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/api.nft_transfer.v1.GetNftTransferRequest'
-                required: true
             responses:
                 "200":
                     description: OK
@@ -201,6 +208,15 @@ components:
         api.helloworld.v1.GetDemoReply:
             type: object
             properties: {}
+        api.nft_transfer.v1.AccountMuteReport:
+            type: object
+            properties:
+                accountId:
+                    type: string
+                collectionId:
+                    type: string
+                createdAt:
+                    type: string
         api.nft_transfer.v1.ActionStArr:
             type: object
             properties:
@@ -243,23 +259,6 @@ components:
                     type: string
                 data:
                     $ref: '#/components/schemas/api.nft_transfer.v1.PnftTransferSt'
-        api.nft_transfer.v1.GetNftTransferRequest:
-            type: object
-            properties:
-                address:
-                    type: string
-                network:
-                    type: string
-                type:
-                    type: string
-                orderBy:
-                    type: string
-                orderDirection:
-                    type: string
-                limit:
-                    type: string
-                cursor:
-                    type: string
         api.nft_transfer.v1.GetReportSpamReply:
             type: object
             properties:
@@ -274,7 +273,8 @@ components:
                     type: integer
                     format: uint32
                 total:
-                    type: string
+                    type: integer
+                    format: uint64
                 data:
                     type: array
                     items:
@@ -292,7 +292,8 @@ components:
                     type: integer
                     format: uint32
                 total:
-                    type: string
+                    type: integer
+                    format: uint64
                 data:
                     type: array
                     items:
@@ -344,6 +345,23 @@ components:
                     type: array
                     items:
                         $ref: '#/components/schemas/api.nft_transfer.v1.NodeStArr'
+        api.nft_transfer.v1.PostReportAccountMuteReply:
+            type: object
+            properties:
+                code:
+                    type: integer
+                    format: uint32
+                message:
+                    type: string
+                data:
+                    $ref: '#/components/schemas/api.nft_transfer.v1.AccountMuteReport'
+        api.nft_transfer.v1.PostReportAccountMuteRequest:
+            type: object
+            properties:
+                accountId:
+                    type: string
+                collectionId:
+                    type: string
         api.nft_transfer.v1.PostReportSpamReply:
             type: object
             properties:
